# ecole42istanbul-cursus

FDF/: Makefile  colors.c  draw.c  errors.c  events.c  fdf.h  initial_data.c  keyboard_events.c  main.c  math.c  mouse_events.c  read_file.c  utils.c
exam-rank-02/: ft_printf.c  get_next_line.c  get_next_line.h  inter.c  union.c
get-next-line/: .gitignore  get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c
inception/: Makefile
libft/: .gitignore  Makefile  a.out  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  (+4 more)
minitalk/: Makefile  client.c  minitalk.h  minitalk_str.c  minitalk_utilias.c  server.c
philosophers/: CMakeLists.txt
philosophers/philo/: Makefile  philo_behaviours.c  philo_check.c  philo_tools.c  philo_utils.c  philosophers.c  philosophers.h
printf/: .gitignore  Makefile  ft_printf.c  ft_printf.h  ft_printf_utils.c
push_swap/: Makefile  check.c  checker.c  errors.c  indexing.c  main.c  push_swap.h  push_swap_utils.c  push_swap_utils_2.c  read_numbers.c  smaller_list.c  sort_the_list.c  sort_the_list2.c
(+261 files in other folders)
